# N-Body-Problem-Simulation

./: .clang-format  .gitignore  CMakeLists.txt  INTERVIEW_PREP.md  PROJECT_ANALYSIS.md  README.md  TECHNICAL.md  barnes_hut.c  ds.h  generate_data.py  io.h  kmeans.c  main.c  morton.c  morton.h  naive.c  simulation.h  time_utils.h  types.h  v1_naive.c  v2_barnes_hut.c  v3_arena.c  v4_morton.c  v5_parallel.c  xeon_results.json  xeon_results_real.json
core/: domain.c  domain.h  ds.h  io.c  io.h  kmeans.c  kmeans.h  morton.c  morton.h  time_utils.h  types.h
data/: result_N_10000_200_steps.gal
data/metrics/: autodl_accuracy.json  autodl_locality_ablation.json  autodl_schedule_ablation.json  autodl_serial_diagnostics.json  autodl_strong_scaling.json  autodl_weak_scaling.json  results_local.json  sweep_accuracy.json  sweep_k.json  sweep_theta.json  uppmax_ablation_results.json  uppmax_full_results.json
data/ref_output_data/: sun_and_planets_3.gal  sun_and_planets_verlet.gal
docs/: BLOG.md  REPORT.md  TECHNICAL.md  interview_prep.md  refactor_plan.md
project/: galsim.c
scripts/: accuracy.py  accuracy_gate.py  audit_versions.py  bench_alloc.c  bench_suite.py  bench_traversal.c  benchmark.py  benchmark_ablation.py  benchmark_full_suite.py  benchmark_server.sh  benchmark_suite.py  code_complexity.py  code_performance.py  compare_results.py  delta_t.py  delta_t_euler.py  generate_data.py  generate_scaling_plots.py  mac_reproduce_all.sh  malloc_analysis.py  nbody_convergence_corrected.py  pareto_experiment.py  plot_roofline.py  plot_scaling.py  quantitative_analysis.py  roofline_analysis.py  scaling_analyzer.py  sweep_accuracy.py  sweep_k.py  sweep_theta.py  unified_benchmark.sh  uppmax_benchmark.sbatch  uppmax_job.sh  uppmax_sync.sh  validate_accuracy.py  visualize.py
src/: barnes_hut.c  barnes_hut.h  ds.h  galsim.c  io.h  kmeans.c  kmeans.h  main.c  morton.c  morton.h
src/core/: io.c  main.c  types.h
src/kernels/: kernels.h  v1_naive.c  v2_barnes_hut.c  v3_arena.c  v4_morton.c  v5_parallel.c
src/legacy/: galsim_v1.c
src/utils/: ds.h  kmeans.h  morton.c  morton.h
tools/: generate_data.py
v1_naive/: galsim.c
v2_barnes_hut/: barnes_hut.c  barnes_hut.h  ds.h  galsim.c
v2x_arena_experimental/: barnes_hut.c  ds.h  galsim.c
v3_arena/: barnes_hut.c  galsim.c
v3_morton/: barnes_hut.c  galsim.c
v4_morton/: barnes_hut.c  barnes_hut.h  ds.h  galsim.c  morton.c  morton.h
v4_parallel/: barnes_hut.h  galsim.c  kmeans.h
v5_parallel/: barnes_hut.c  barnes_hut.h  ds.h  galsim.c  kmeans.c  morton.c  morton.h
